INPUT element: Updating value to the previous defaultValue should dispatch "change" event.

We have set defaultValue to m_textAsOfLastFormControlChangeEvent only when input
type was determined, and updating defalutValue after it didn't update
m_textAsOfLastFormControlChangeEvent. So, 'change' event was not dispatched in
some cases.

BUG=659499

Review-Url: https://codereview.chromium.org/2452903002
Cr-Commit-Position: refs/heads/master@{#427675}

Former-commit-id: 3393d5c2830af28ce61500bf66cdae94cddfc028